countup: add desc, improve title.

--- a/app/countup.html
+++ b/app/countup.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="A timer that counts and announces each minute that has passed to help you keep track of time when when your intuitive clock is focused elsewhere.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Countup Timer</title>
+    <title>Countup Timer | mcomella.com</title>
     <style>
         :root {
             font-size: 18pt;
