remind: add placeholders.

--- a/app/remind.html
+++ b/app/remind.html
@@ -157,12 +157,12 @@
         <h1>Remind me</h1>
         <form>
             <label for="utterance">Say</label>
-            <input id="utterance" autofocus>
+            <input id="utterance" autofocus placeholder="…">
             <label>every</label>
             <div id="duration">
-                <input type="number" id="min">
+                <input type="number" id="min" placeholder="#">
                 <label>to</label>
-                <input type="number" id="max">
+                <input type="number" id="max" placeholder="#">
             </div>
             <label>minutes</label>
             <label class="switch">
