--- a/app/five_minute_warning.html
+++ b/app/five_minute_warning.html
@@ -6,12 +6,13 @@
     <title>Five Minute Warning</title>
     <style>
         body {
+            margin: 0;
+            height: 100svh;
+
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin: 0;
-            height: 100vh;
         }
 
         form {
