--- a/app/countup.html
+++ b/app/countup.html
@@ -21,6 +21,23 @@
             align-items: center;
         }
 
+        h1 {
+            margin: 0;
+            font-size: 1.5rem;
+            font-weight: lighter;
+        }
+
+        #container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 10rem;
+            padding: 18px 16px 32px 16px; /* top padding is shorter to offset padding added by text */
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px #ccc;
+        }
+
         p {
             margin: 0;
         }
@@ -32,15 +49,20 @@
 
         button {
             width: 5.8rem;
-            margin: 32px 0;
+            margin-top: 32px;
             font-size: 1.2rem;
         }
     </style>
 </head>
 <body>
-    <p id="elapsed-duration">0</p>
-    <p>minutes elapsed</p>
-    <button id="toggle-timer" autofocus>START</button>
+    <div>
+        <h1>Countup</h1>
+        <div id="container">
+            <p id="elapsed-duration">0</p>
+            <p>minutes elapsed</p>
+            <button id="toggle-timer" autofocus>START</button>
+        </div>
+    </div>
 
     <script>
         const TYPE_STOPPED = 'STOPPED';
