add <main> element.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<main>
 <section class="content post-list">
   <h1 class="posts-heading">Posts</h1>
   <ul>
@@ -13,3 +14,4 @@ layout: default
   </li> {% endfor %}
   </ul>
 </section>
+</main>
